# Yolah

./: .clangd  .gitignore  ALPHAZERO_QUICKSTART.md  CMakeLists.txt  README.md  main.cpp  mcts_vs_nnue.txt  mm_vs_nnue.txt  res_1000_4r_2s_16.txt
alphazero/: 00_START_HERE.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  LATEX_CHEATSHEET.md  README.md  alphazero_mcts.cpp  alphazero_mcts.h  alphazero_network.cu  alphazero_network.h  export_model.py  self_play.cpp  self_play.h  selfplay_main.cpp  trainer.py
bench/: CMakeLists.txt  main.cpp  matmul.cpp  matmul.h  matvec.cpp  matvec.h  util.h
book/: ADVANCED_LATEX_TIPS.md  BENCHMARK_README.md  BOOK_RECOMMENDATIONS.md  BOOK_SETUP_GUIDE.md  CMakeLists.txt  LATEX_CHEATSHEET.md  MAGIC_NUMBERS.md  Makefile  README_BOOK_PROJECT.md  a.out  black_bitboard.tex  black_white_bitboard.tex  book.acn  book.acr  book.alg  book.aux  book.bbl  book.bcf  book.blg  book.glg  book.ist  book.lof  book.lot  book.out  book.run.xml  book.tex  book.toc  book_modular.tex  book_template.aux  book_template.bcf  book_template.lof  book_template.out  book_template.run.xml  book_template.tex  book_template.toc  fade_image.py  find_magic_simple.py  find_magic_z3.py  generate_board_diagram.py  generate_figures.py  (+11 more)
book/_minted-book/: 0098E09D909DF7A9A3652BCAF3F3C001CA85B55FD67CF182B6B687FEA87D2C50.pygtex  00D9FE91578F0AB963714F7F9B70BE4EEAAEBAE48CE0730BDF2691B1963EEA46.pygtex  01B8A8B7FB8F3A39CC102E139EEA4C99EAAEBAE48CE0730BDF2691B1963EEA46.pygtex  0266C23DAC47BE8736C0C41B8EF0E1AB93C4B3F5D7A0ADF48EF068E56C706D5A.pygtex  03C2832044F450D994559FBF8FDD2D1E93C4B3F5D7A0ADF48EF068E56C706D5A.pygtex  047535F709F8CFA423EB95880103D97F93C4B3F5D7A0ADF48EF068E56C706D5A.pygtex  05F825C0646333386F2DE2580016FA7593C4B3F5D7A0ADF48EF068E56C706D5A.pygtex  07850562ED179EC90D7204472C564D85EAAEBAE48CE0730BDF2691B1963EEA46.pygtex  0791E46AA379F41D73F0ECFB6DE6937793C4B3F5D7A0ADF48EF068E56C706D5A.pygtex  07B228B60BB50473F1BD4A3EC83C9145CA85B55FD67CF182B6B687FEA87D2C50.pygtex  07B819D7E9DA24AB84C478F12AD3A4B6EAAEBAE48CE0730BDF2691B1963EEA46.pygtex  08778DFD9AC4F603231896ABA7AAD52393C4B3F5D7A0ADF48EF068E56C706D5A.pygtex  0911C909A7B109F208E7EB9F88D6AC2393C4B3F5D7A0ADF48EF068E56C706D5A.pygtex  092D39CA166AF973CA6EF1F25F31C149EAAEBAE48CE0730BDF2691B1963EEA46.pygtex  0A72A22B000CEE5B68D888260B34FAA4EAAEBAE48CE0730BDF2691B1963EEA46.pygtex  0A9E645A0337A2A9D892B89FB01B070F93C4B3F5D7A0ADF48EF068E56C706D5A.pygtex  0B045F7304537E7B1CCFB9DF6D4B493BEAAEBAE48CE0730BDF2691B1963EEA46.pygtex  0B7359DCB0D3C154B5800B9D553073E593C4B3F5D7A0ADF48EF068E56C706D5A.pygtex  0DABE0AC327240BFA13585FCAB742C6793C4B3F5D7A0ADF48EF068E56C706D5A.pygtex  0E4625058BEECBB56D4BACA2898C408A93C4B3F5D7A0ADF48EF068E56C706D5A.pygtex  1026BAB27E4A35C74EEDB004323742AD93C4B3F5D7A0ADF48EF068E56C706D5A.pygtex  104BF315A2D2358AE4233DF1E1F7956F93C4B3F5D7A0ADF48EF068E56C706D5A.pygtex  11696CE688EBAD5D16AAFDC218AD42B593C4B3F5D7A0ADF48EF068E56C706D5A.pygtex  12307D4162482D9C084790115F17564E93C4B3F5D7A0ADF48EF068E56C706D5A.pygtex  13BDC40433D60063203F48495131540593C4B3F5D7A0ADF48EF068E56C706D5A.pygtex  13D5C3264ABD3F1C9D09AAA41AC57CA593C4B3F5D7A0ADF48EF068E56C706D5A.pygtex  13E65A08B29A9890D5AE422D9E5F36B693C4B3F5D7A0ADF48EF068E56C706D5A.pygtex  1408557A3831AD2676A7DC91B47F208D0A3767F64192739B9886B13895A28D92.pygtex  15D212B510221B8A5743244F62B65AF493C4B3F5D7A0ADF48EF068E56C706D5A.pygtex  15E87A35C76D7469DD435C43D73BDBE893C4B3F5D7A0ADF48EF068E56C706D5A.pygtex  1692E3FFCC10F042CACAB50AF9E4CF1F93C4B3F5D7A0ADF48EF068E56C706D5A.pygtex  16C0F4BE9695FE48706DFEBD921055F793C4B3F5D7A0ADF48EF068E56C706D5A.pygtex  16E0F6DC964D7C2B0E6EFB791A7D22FFEAAEBAE48CE0730BDF2691B1963EEA46.pygtex  17DEC7552C688CF5DC29F4CAE0DC0F4893C4B3F5D7A0ADF48EF068E56C706D5A.pygtex  182025B2445C73B34E51E1772A9AFBBF93C4B3F5D7A0ADF48EF068E56C706D5A.pygtex  (+358 more)
book/chapters/: 01_introduction.tex
book/code/: a.out  (+76 more)
nnue/: CMakeLists.txt  MEMMAP_USAGE.md  README_MULTISTAGE.md  a.out  cnn_resnet.py  cnn_resnet_with_diff_score.py  combined_network.py  compare_models.cpp  compare_models.h  compare_nnue_and_heuristic.py  compare_nnue_and_nnue_quantized.cpp  compare_nnue_and_nnue_quantized.h  discrepancies_between_features_net.cpp  extract_separate_nets.py  features_128x64x3.float.txt  features_128x64x3.pt  features_128x64x3.quantized.txt  features_network.py  features_network_mono.py  ffnn.cpp  ffnn.h  ffnn_float.cpp  ffnn_float.h  game_example.txt  generate_predictions_from_features_net.py  generate_predictions_from_model.py  generate_weights_from_model.py  inspect_multistage_weights.py  logic_net.cpp  logic_net.h  logic_net.py  logic_net_learning.cpp  logic_net_learning.h  mapping_loop.def  mapping_loop.py  model.txt  model1.txt  neuron_synthesis.py  nnue  nnue.cpp  (+121 more)
player/: .#features.hpp  CMakeLists.txt  MCTS_mem_nn_player.cpp  MCTS_mem_nn_player.h  MCTS_mem_player.cpp  MCTS_mem_player.h  MCTS_player.cpp  MCTS_player.h  alphazero_player.cpp  alphazero_player.h  basic_minmax_player.cpp  basic_minmax_player.h  client_player.cpp  client_player.h  feature_net_player.cpp  feature_net_player.h  features.hpp  features_net_player.cpp  features_net_player.h  heuristic.cpp  heuristic.h  heuristic_features.cpp  heuristic_features.h  heuristic_weights_learner.cpp  heuristic_weights_learner.h  human_player.cpp  human_player.h  minmax_nnue_player.cpp  minmax_nnue_player.h  minmax_nnue_quantized_player.cpp  minmax_nnue_quantized_player.h  minmax_player.cpp  minmax_player.h  minmax_player2.cpp  minmax_player2.h  minmax_player_v1.cpp  minmax_player_v1.h  minmax_player_v10.cpp  minmax_player_v10.h  minmax_player_v11.cpp  (+29 more)
python_binding/: CMakeLists.txt  yolah_bind.cpp
test/: CMakeLists.txt  beale_function.cpp  beale_function.h  cem_test.cpp  cem_test.h  human_player.cpp  human_player.h  human_player_test.cpp  human_player_test.h  nelder_mead_test.cpp  nelder_mead_test.h  play.cpp  play.h  random_game.cpp  random_game.h  rastrigin_function.cpp  rastrigin_function.h  sphere_function.cpp  sphere_function.h  tournament.cpp  tournament.h  variability_timer_multithreads.cpp  variability_timer_multithreads.h
(+3490 files in other folders)
