cmake_minimum_required(VERSION 3.20.0)
project(Yolah CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Boost 1.71 COMPONENTS program_options REQUIRED)
find_package(TBB REQUIRED)
find_package(Threads REQUIRED)

add_executable(Yolah main.cpp)
target_compile_options(Yolah PRIVATE -Wall)

target_include_directories(Yolah PRIVATE ${Boost_INCLUDE_DIR})
target_link_libraries(Yolah PRIVATE ${Boost_LIBRARIES})
target_link_libraries(Yolah PRIVATE TBB::tbb)
target_link_libraries(Yolah PRIVATE Threads::Threads)
add_subdirectory(game)
target_link_libraries(Yolah PRIVATE game)
add_subdirectory(misc)
target_link_libraries(Yolah PRIVATE misc)
add_subdirectory(test)
target_link_libraries(Yolah PRIVATE test)
add_subdirectory(player)
target_link_libraries(Yolah PRIVATE player)
add_subdirectory(ui)
target_link_libraries(Yolah PRIVATE ui)
add_subdirectory(optimization)
target_link_libraries(Yolah PRIVATE optimization)
