cmake_minimum_required(VERSION 3.20.0)

# Enable CUDA support (optional - only if CUDA is available)
option(ENABLE_CUDA "Enable CUDA support for AlphaZero" OFF)

if(ENABLE_CUDA)
    project(Yolah CXX CUDA)
    enable_language(CUDA)
else()
    project(Yolah CXX)
endif()

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(OpenMP)
find_package(Boost 1.71 COMPONENTS program_options REQUIRED)
find_package(TBB REQUIRED)
find_package(Threads REQUIRED)
find_package(benchmark REQUIRED)

add_executable(Yolah main.cpp)
target_compile_options(Yolah PRIVATE -Wall -march=native -mavx2 -ffast-math -funroll-loops -fopenmp)

if(OpenMP_CXX_FOUND)
    target_link_libraries(Yolah PRIVATE OpenMP::OpenMP_CXX)
endif()
target_include_directories(Yolah PRIVATE ${Boost_INCLUDE_DIR})
target_link_libraries(Yolah PRIVATE ${Boost_LIBRARIES})
target_link_libraries(Yolah PRIVATE TBB::tbb)
target_link_libraries(Yolah PRIVATE Threads::Threads)
add_subdirectory(game)
target_link_libraries(Yolah PRIVATE game)
add_subdirectory(misc)
target_link_libraries(Yolah PRIVATE misc)
add_subdirectory(test)
target_link_libraries(Yolah PRIVATE test)
add_subdirectory(player)
target_link_libraries(Yolah PRIVATE player)
add_subdirectory(ui)
target_link_libraries(Yolah PRIVATE ui)
add_subdirectory(optimization)
target_link_libraries(Yolah PRIVATE optimization)
add_subdirectory(data)
target_link_libraries(Yolah PRIVATE data)
add_subdirectory(nnue)
target_link_libraries(Yolah PRIVATE nnue)

# AlphaZero (only if CUDA is enabled)
if(ENABLE_CUDA)
    add_subdirectory(alphazero)
    target_link_libraries(Yolah PRIVATE alphazero)
endif()
